<resources>
    <string name="app_name">ex2-home</string>
    recent
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="recent">Recent Result:</string>
    <string name="best">Best Result:</string>
    <string name="settings">Settings</string>
    <string name="start">start</string>
    <string name="push_me">push me</string>


    <string name="level">Level:</string>
    <string name="complexity">Complexity:</string>
    <string name="saveButton">save</string>


</resources>
