<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="#65b4ff"
        android:id="@+id/textViewRecent"
        android:layout_above="@+id/textViewBest"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/recent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="#65b4ff"
        android:id="@+id/textViewBest"
        android:layout_above="@+id/buttonSetting"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/best" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/buttonSetting"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/buttonStart"
        android:layout_marginEnd="53dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/buttonStart"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/textViewBest"
        android:layout_marginEnd="59dp" />

    <com.example.aviram.ex2_home.drawAnimation
        android:id="@+id/layoutToDraw"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textViewRecent"/>


</RelativeLayout>
